    *   (ms) Applied patch by Peter Rabbitson, which fixes the caller() 
             level when calling get_logger() on a subclass of Log4perl.
    *   (ms) Added documentation on is_xxx() methods and clarified that
             it doesn't necessarily mean that a message gets logged if
             they're returning true (requested by Conway Allen via 
             [rt.cpan.org #39085].

1.18 (2008/08/23)
    *   (ms) Added explanation that categories and loggers are the same
             thing (thanks to Rabbit).
    *   (ms) Fixed t/053Resurrect to work with 5.005_03
    *   (ms) Added preinit_callback function for init_and_watch()
    *   (ms) Applied patch by Andy Grundman which speeds up is_LEVEL()
             calls by skipping unnecessary string concatenations 
             (http://rt.cpan.org/Ticket/Display.html?id=38537).
    *   (ms) Applied patch by Jae Gangemi addding a no_warning option to the
             socket appender
             (http://rt.cpan.org/Ticket/Display.html?id=34399).

1.17 (2008/07/19)
    *   (ms) Fixed test suite to run on Strawberry Perl on Win32.
    *   (ms) Added 'l4p' as a valid prefix in configuration files (equal
             to 'log4j' and 'log4perl' now).

1.16 (2008/05/15)
    *   (ms) Changed appender destruction during cleanup to show warning
             messages thrown by destructors. Previously L4p ignored these
             messages which caused failed DB flushes to go unnoticed with
             the DB appender.
    *   (ms) Added explanation for Log4perl messages during global 
             destruction to FAQ.
    *   (ms) Corrected 'Trapper' listing in FAQ, thanks to Christian Reiber.
    *   (ms) Applied patch by Mitchell Perilstein for 5.005it and the
             two-argument binmode() that 5.005 doesn't support.
             (http://rt.cpan.org/Ticket/Display.html?id=34051)
    *   (ms) Applied patch by Emmanuel Rodriguez (POTYL) doing away with 